"modificacion de graficos, ejes, titulos, colores"

--- a/horas_2023-2/opcion_lectura_por_consola.html
+++ b/horas_2023-2/opcion_lectura_por_consola.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-	<title>Graficar Nombres y Edades</title>
+	<title>Graficar </title>
 	<link rel="stylesheet" type="text/css" href="./css/styles_lectura_por_consola.css">
-		<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+	<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
 	<script type="text/javascript" src="script_lectura_por_consola.js"></script>
 </head>
+
 <body>
 	<h1 id="titulo_grafico">Entrada de datos</h1>
-	<div id="input_section">
-		
+	<div id="grid-container">
+
 		<form class="separar" id="data_form">
 			<label for="cantidad">Cantidad de Nombres:</label>
 			<input type="number" id="cantidad" name="cantidad" min="1" max="10" value="4">
@@ -23,10 +25,10 @@
 			<label for="tituloX">Título Eje X:</label>
 			<input type="text" id="tituloX" name="tituloX" value="Nombre">
 			<br>
-			
+
 			<br>
-			
-		</form >
+
+		</form>
 		<form class="separar" action="">
 			<label for="tituloY">Título Eje Y:</label><br>
 			<input type="text" id="tituloY" name="tituloY" value="Edad">
@@ -50,8 +52,9 @@
 			</select>
 		</form>
 		<input type="button" value="Graficar" id="graficarButton">
-			<input type="button" value="Eliminar Gráfico" id="eliminarButton">
+		<input type="button" value="Eliminar Gráfico" id="eliminarButton">
 	</div>
 	<div id="chart_div" style="width: 100%; height: 500px;"></div>
 </body>
+
 </html>
