--- a/horas_2023-2/index.html
+++ b/horas_2023-2/index.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
-    <nav>
+    <nav class="ingreso">
         <ul>
             <li><a href="opcion_lectura_por_consola.html">Ingresar datos por consola</a></li>
+        </ul>
+        <ul>
             <li><a href="opcion_csv.html">Ingresar archivo csv</a></li>
         </ul>
     </nav>
