se agregaron estilos a la lectura por consola

--- a/horas_2023-2/opcion_lectura_por_consola.html
+++ b/horas_2023-2/opcion_lectura_por_consola.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-	<h1 id="titulo_grafico">Entrada de datos</h1>
+	<h1 id="titulo_grafico" ;">Entrada de datos</h1>
 	<div id="grid-container">
 
 		<form class="separar" id="data_form">
